# hzforge

./: .gitignore  LICENSE.md  README.md  hzforge.py
.github/workflows/: integration.yml  tests.yml
docs/: README.md  architecture.md  manual-install.md  migration.md  motivations.md  requirements.md  services.md  summary.md  usage.md
gh-pages/: build_site.py  site.json
gh-pages/public/: index.html
gh-pages/public/operations/: index.html
gh-pages/public/operations/manual-install/: index.html
gh-pages/public/operations/migration/: index.html
gh-pages/public/operations/requirements/: index.html
gh-pages/public/operations/usage/: index.html
gh-pages/public/overview/: index.html
gh-pages/public/overview/motivations/: index.html
gh-pages/public/overview/summary/: index.html
gh-pages/public/reference/: index.html
gh-pages/public/reference/architecture/: index.html
gh-pages/public/reference/services/: index.html
gh-pages/templates/: home.html
plugins/cmsauth/: Makefile  README.md  pyproject.toml  setup.cfg
plugins/cmsauth/src/hubzero_cmsauth/: __init__.py  api.py
plugins/cmsauth/tests/: conftest.py  test_api.py
plugins/macros/: Makefile  README.md  pyproject.toml  setup.cfg
plugins/macros/src/hubzero_macros/: __init__.py  image.py  link.py
plugins/macros/tests/: conftest.py  test_macros.py
plugins/mysqlauthz/: Makefile  README.md  pyproject.toml  setup.cfg
plugins/mysqlauthz/src/hubzeroplugin/: __init__.py  api.py
plugins/mysqlauthz/tests/: conftest.py  test_api.py
tests/: test_hzforge.py
