# Project metadata in setup.cfg (declarative, no setup.py) -- so this
# package builds on Rocky 8's stock Py3.6 + setuptools 59, whose setuptools
# predates PEP 621 [project] support in pyproject.toml.  See
# plugins/mysqlauthz/setup.cfg for the longer explanation.

[metadata]
name             = hubzero-trac-cmsauth
version          = 1.0.6
description      = HUBzero CMS single sign-on for Trac (IAuthenticator + login/logout redirect to HUBzero)
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
author           = The Regents of the University of California
maintainer       = HUBzero
url              = https://github.com/hubzero/hzforge/tree/main/plugins/cmsauth
project_urls     =
    Source = https://github.com/hubzero/hzforge/tree/main/plugins/cmsauth
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Trac
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.11

[options]
package_dir      =
    = src
packages         = find:
python_requires  = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
install_requires =
    # NOTE: Trac is intentionally NOT listed here.  This plugin is dropped
    # into an existing Trac install (1.0.x on Py2 hubs today, 1.6+ on Py3
    # hubs post-migration); listing `Trac>=1.0` would let pip upgrade the
    # host's Trac out from under the running mod_wsgi daemons on a routine
    # plugin reinstall.  See plugins/mysqlauthz/setup.cfg for the longer
    # explanation and the 2026-05-29 incident this rule prevents.
    # Plugin installs should also use `pip install --no-deps` as belt+suspenders.
    #
    # No third-party HTTP/JSON dependency -- we use the stdlib (http.client +
    # json + ssl) so this plugin installs cleanly without pulling requests/etc.

[options.packages.find]
where = src

[options.entry_points]
# One trac.plugins entry per module containing Components.  The plugin ships
# a single Component -- HubzeroSSOLoginModule -- in hubzero_cmsauth.api.
trac.plugins =
    hubzero_cmsauth.api = hubzero_cmsauth.api

[bdist_wheel]
# Pure-Python, runs on both interpreter majors -- emit py2.py3-none-any.
universal = 1
