[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Iterations:
#   hzforge.0  verbatim copy of hubzero-forge's source/{image.py.in,link.py.in}
#              (the `.in` suffix is vestigial -- the upstream files already
#              resolve URLs at request time via self.env.abs_href(), no
#              templating needed)
#   hzforge.1  dual-target Py2.7 + Py3.11 (the upstream source was already
#              syntactically Py3-clean -- this commit just adds the future
#              imports + drops the dead `from trac.web.href import Href`),
#              plus 7 pytest cases covering both macros' basic / already-
#              slashed / different-env / multi-word paths
[project]
name            = "hubzero-trac-macros"
version         = "0.1.0+hzforge.1"
description     = "HUBzero Trac wiki macros: [[image ...]] and [[link ...]]"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "The Regents of the University of California" }]
maintainers     = [{ name = "HUBzero" }]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"
classifiers     = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Trac",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies    = [
    "Trac>=1.0",
]

[project.entry-points."trac.plugins"]
# One entry per module so Trac discovers both imageMacro and linkMacro.
"hubzero_macros.image" = "hubzero_macros.image"
"hubzero_macros.link"  = "hubzero_macros.link"

[project.urls]
Source   = "https://github.com/hubzero/hzforge/tree/main/plugins/macros"
Upstream = "https://gitlab.hubzero.org/hubzero-packaging-repositories/hubzero-forge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]    # so `from hubzero_macros import image, link` resolves to src/hubzero_macros/
