[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata lives in setup.cfg -- see plugins/mysqlauthz/pyproject.toml
# for the why (Py3.6 setuptools predates PEP 621 [project] support).
#
# Iterations:
#   hzforge.0  verbatim copy of hubzero-forge's source/{image.py.in,link.py.in}
#              (the `.in` suffix is vestigial -- the upstream files already
#              resolve URLs at request time via self.env.abs_href(), no
#              templating needed)
#   hzforge.1  dual-target Py2.7 + Py3.11 (the upstream source was already
#              syntactically Py3-clean -- this commit just adds the future
#              imports + drops the dead `from trac.web.href import Href`),
#              plus 7 pytest cases covering both macros' basic / already-
#              slashed / different-env / multi-word paths

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]    # so `from hubzero_macros import image, link` resolves to src/hubzero_macros/
