# Project metadata in setup.cfg (declarative, no setup.py) -- see
# plugins/mysqlauthz/setup.cfg for the why (Py3.6 setuptools doesn't read
# PEP 621 [project] in pyproject.toml).

[metadata]
name             = hubzero-trac-macros
version          = 0.1.0+hzforge.1
description      = HUBzero Trac wiki macros: [[image ...]] and [[link ...]]
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
author           = The Regents of the University of California
maintainer       = HUBzero
url              = https://github.com/hubzero/hzforge/tree/main/plugins/macros
project_urls     =
    Source   = https://github.com/hubzero/hzforge/tree/main/plugins/macros
    Upstream = https://gitlab.hubzero.org/hubzero-packaging-repositories/hubzero-forge
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Trac
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.11

[options]
package_dir      =
    = src
packages         = find:
python_requires  = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
install_requires =
    Trac>=1.0

[options.packages.find]
where = src

[options.entry_points]
# One entry per module so Trac discovers both imageMacro and linkMacro.
trac.plugins =
    hubzero_macros.image = hubzero_macros.image
    hubzero_macros.link  = hubzero_macros.link

[bdist_wheel]
# Pure-Python on both interpreter majors -- emit py2.py3-none-any.
universal = 1
