[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Dual-target Py2.7 + Py3.11 wheel.  Iterations:
#   hzforge.0  verbatim copy of upstream 2.2.5
#   hzforge.1  Py3-compatibility port (import names, <> operator, future imports)
#   hzforge.2  parameterize every cursor.execute() -- close the SQL-injection class
#              (also enables PyMySQL's driver-side quoting / type handling)
# Items still pending: class-level connection state, disconnect() never closes,
# project_id int+str log concat, get_permission_groups undefined `proj` alias,
# unreachable `if True:` elif branches.
[project]
name            = "hubzero-trac-mysqlauthz"
version         = "2.2.5+hzforge.2"
description     = "HUBzero IPermissionStore / IPermissionGroupProvider for Trac (MySQL CMS backend)"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "The Regents of the University of California" }]
maintainers     = [{ name = "HUBzero" }]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"
classifiers     = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Trac",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies    = [
    # Trac itself spans the range we target: 1.0.x on Py2 hubs through 1.6+ on Py3 hubs.
    "Trac>=1.0",
    # PyMySQL replaces MySQLdb -- it works on both interpreters via env markers
    # (the 0.10.x line is the last Py2-capable PyMySQL; 1.x is Py3-only).  Its
    # connect() accepts MySQLdb's `passwd=`/`db=` kwarg names as aliases, so the
    # call site doesn't need to change.
    "PyMySQL<1.0; python_version<'3'",
    "PyMySQL>=1.0; python_version>='3'",
    # configparser is in the Py3 stdlib; the PyPI backport gives Py2 the same
    # module name so `from configparser import RawConfigParser` works on both.
    "configparser; python_version<'3'",
]

[project.entry-points."trac.plugins"]
# Preserved exactly from hubzero-trac-mysqlauthz 2.x so the Py3 wheel drops in
# over the existing RPM without any trac.ini change.
"hubzeroplugin.api" = "hubzeroplugin.api"

[project.urls]
Source   = "https://github.com/hubzero/hzforge/tree/main/plugins/mysqlauthz"
Upstream = "https://gitlab.hubzero.org/hubzero-packaging-repositories/hubzero-trac-mysqlauthz"

[tool.setuptools.packages.find]
where = ["src"]
