[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata (name, version, dependencies, entry_points, ...) lives in
# setup.cfg -- so this package builds on Rocky 8's stock Py3.6 + setuptools 59
# (which predates PEP 621 [project] support in pyproject.toml).
#
# Dual-target Py2.7 + Py3.x wheel.  This is hubzero-trac-mysqlauthz 2.4.0;
# it supersedes upstream 2.2.5 with parameterized SQL, a connection-management
# rewrite, the long-broken `get_permission_groups` query fix, and a 17-test
# pytest suite.  See README.md "Iteration log" for the per-commit dev journey.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]    # so `from hubzeroplugin import api` resolves to src/hubzeroplugin/
