# Project metadata in setup.cfg (declarative, no setup.py) -- so this
# package builds on Rocky 8's stock /usr/bin/python3 (Py3.6 + setuptools 59),
# whose setuptools predates PEP 621 ([project] in pyproject.toml).  The
# build-system block in pyproject.toml still pins setuptools>=42 + wheel.
#
# This file is the single source of truth for the package metadata; keep
# pyproject.toml's [project] section deleted to avoid drift.

[metadata]
name             = hubzero-trac-mysqlauthz
version          = 2.4.0
description      = HUBzero IPermissionStore / IPermissionGroupProvider for Trac (MySQL CMS backend)
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
author           = The Regents of the University of California
maintainer       = HUBzero
url              = https://github.com/hubzero/hzforge/tree/main/plugins/mysqlauthz
project_urls     =
    Source   = https://github.com/hubzero/hzforge/tree/main/plugins/mysqlauthz
    Upstream = https://gitlab.hubzero.org/hubzero-packaging-repositories/hubzero-trac-mysqlauthz
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Framework :: Trac
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.11

[options]
package_dir      =
    = src
packages         = find:
python_requires  = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
install_requires =
    # Trac itself spans the range we target: 1.0.x on Py2 hubs through 1.6+ on Py3 hubs.
    Trac>=1.0
    # PyMySQL replaces MySQLdb -- env markers split the Py2/Py3 capable lines
    # (0.10.x is the last Py2-capable; 1.x is Py3-only).  Its connect() accepts
    # MySQLdb's `passwd=`/`db=` kwarg names as aliases.
    PyMySQL<1.0; python_version<'3'
    PyMySQL>=1.0; python_version>='3'
    # configparser is in the Py3 stdlib; the PyPI backport gives Py2 the same
    # module name so `from configparser import RawConfigParser` works on both.
    configparser; python_version<'3'

[options.packages.find]
where = src

[options.entry_points]
# Preserved exactly from hubzero-trac-mysqlauthz 2.x so the wheel drops in
# over the existing RPM without any trac.ini change.
trac.plugins =
    hubzeroplugin.api = hubzeroplugin.api

[bdist_wheel]
# Pure-Python, runs on both interpreter majors -- emit a py2.py3-none-any wheel
# (one artifact installs on Py2.7 and Py3.6+).  Our dual-target test matrix
# (Makefile: `make test-all`) backs this up.
universal = 1
